// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controller leftHeader dispose gameObject test scene tree dispose current gameObject 1`] = `
<article
  className="wonder-sceneTree-component"
  id="wonder-sceneTree-component"
>
  <article
    className="wonder-tree"
  >
    <ul
      className="wonder-tree-node"
    >
      <li>
        <div
          className="item-triangle"
          onMouseDown={[Function]}
        >
          <img
            src="./public/img/down.png"
          />
        </div>
        <div
          className="draggable-container  no-drag"
          draggable={false}
          id="sceneTreeNode-0"
          onClick={[Function]}
          onDragEnd={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            className="treeNode-icon"
            src="./public/img/gameObjectIcon.png"
          />
          scene
        </div>
      </li>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            id="sceneTreeNode-6"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            <img
              className="treeNode-icon"
              src="./public/img/cameraIcon.png"
            />
            Camera
          </div>
        </li>
      </ul>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            id="sceneTreeNode-4"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            <img
              className="treeNode-icon"
              src="./public/img/gameObjectIcon.png"
            />
            Cube
          </div>
        </li>
      </ul>
      <ul
        className="wonder-tree-node"
      >
        <li>
          <div
            className="item-triangle"
          />
          <div
            className="draggable-container  no-drag"
            draggable={true}
            id="sceneTreeNode-5"
            onClick={[Function]}
            onDragEnd={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            style={Object {}}
          >
            <img
              className="treeNode-icon"
              src="./public/img/lightIcon.png"
            />
            Direction Light
          </div>
        </li>
      </ul>
    </ul>
  </article>
</article>
`;

exports[`controller leftHeader dispose gameObject test scene tree if not set currentSceneTreeNode, disposed button's disabled props should == true 1`] = `
<article
  className="wonder-left-components-header"
>
  <div
    className="sceneTree-header-item"
    onClick={[Function]}
  >
    <div
      className="item-canBeClick"
      title="add gameObject"
    >
      <img
        src="./public/img/add.png"
      />
    </div>
  </div>
  <div
    className="sceneTree-header-item"
    onClick={[Function]}
    title="remove gameObject"
  >
    <div
      className="item-canBeClick"
    >
      <img
        src="./public/img/notRemove.png"
      />
    </div>
  </div>
  <div
    className="sceneTree-header-item"
    onClick={[Function]}
    title="clone gameObject"
  >
    <div
      className="item-canBeClick"
    >
      <img
        src="./public/img/notClone.png"
      />
    </div>
  </div>
</article>
`;

exports[`controller leftHeader dispose gameObject test scene tree if set currentSceneTreeNode, disposed button's disabled props should == false 1`] = `
<article
  className="wonder-left-components-header"
>
  <div
    className="sceneTree-header-item"
    onClick={[Function]}
  >
    <div
      className="item-canBeClick"
      title="add gameObject"
    >
      <img
        src="./public/img/add.png"
      />
    </div>
  </div>
  <div
    className="sceneTree-header-item"
    onClick={[Function]}
    title="remove gameObject"
  >
    <div
      className="item-notBeClick"
    >
      <img
        src="./public/img/remove.png"
      />
    </div>
  </div>
  <div
    className="sceneTree-header-item"
    onClick={[Function]}
    title="clone gameObject"
  >
    <div
      className="item-notBeClick"
    >
      <img
        src="./public/img/clone.png"
      />
    </div>
  </div>
</article>
`;
